# charon

./: .gitattributes  .hlint.yaml  CHANGELOG.md  Makefile  README.md  cabal.ghc9101.project.freeze  cabal.ghc9122.project.freeze  cabal.project  charon.cabal  flake.nix  hie.yaml  safe-rm.cabal  stack.yaml
.github/scripts/: release_linux.sh  release_osx.sh  release_windows.sh  verify_env.sh
.github/workflows/: cabal.yaml  ci.yaml  nix.yaml  stress.yaml  style.yaml
app/: Main.hs
benchmarks/: Main.hs  baseline_9.4.4.csv  baseline_9.6.3.csv  baseline_ci.csv  baseline_ubuntu-latest_9.10.1_ci.csv  bench.csv
benchmarks/Benchmarks/: Prelude.hs  ReadIndex.hs
docker/alpine_amd64/: Dockerfile
docker/alpine_arm64v8/: Dockerfile
docs/: Charon-Backend-Cbor-BackendArgs.html  Charon-Backend-Cbor-PathData.html  Charon-Backend-Cbor.html  Charon-Backend-Data.html  Charon-Backend-Default-BackendArgs.html  Charon-Backend-Default-Exception.html  Charon-Backend-Default-Index.html  Charon-Backend-Default-Trash.html  Charon-Backend-Default-Utils.html  Charon-Backend-Default.html  Charon-Backend-Fdo-BackendArgs.html  Charon-Backend-Fdo-DirectorySizes.html  Charon-Backend-Fdo-PathData.html  Charon-Backend-Fdo-Utils.html  Charon-Backend-Fdo.html  Charon-Backend-Json-BackendArgs.html  Charon-Backend-Json-PathData.html  Charon-Backend-Json.html  Charon-Backend-Rosetta.html  Charon-Class-Serial.html  Charon-Data-Index.html  Charon-Data-Metadata.html  Charon-Data-PathData-Formatting.html  Charon-Data-PathData.html  Charon-Data-PathType.html  Charon-Data-Paths.html  Charon-Data-Timestamp.html  Charon-Data-UniqueSeq-Internal.html  Charon-Data-UniqueSeq.html  Charon-Data-UniqueSeqNE-Internal.html  Charon-Data-UniqueSeqNE.html  Charon-Env.html  Charon-Exception.html  Charon-Runner-Args.html  Charon-Runner-CharonT.html  Charon-Runner-Command-List.html  Charon-Runner-Command.html  Charon-Runner-Env.html  Charon-Runner-FileSizeMode.html  Charon-Runner-Phase.html  (+47 more)
docs/src/: Charon.Backend.Cbor.BackendArgs.html  Charon.Backend.Cbor.PathData.html  Charon.Backend.Cbor.html  Charon.Backend.Data.html  Charon.Backend.Default.BackendArgs.html  Charon.Backend.Default.Exception.html  Charon.Backend.Default.Index.html  Charon.Backend.Default.Trash.html  Charon.Backend.Default.Utils.html  Charon.Backend.Default.html  Charon.Backend.Fdo.BackendArgs.html  Charon.Backend.Fdo.DirectorySizes.html  Charon.Backend.Fdo.PathData.html  Charon.Backend.Fdo.Utils.html  Charon.Backend.Fdo.html  Charon.Backend.Json.BackendArgs.html  Charon.Backend.Json.PathData.html  Charon.Backend.Json.html  Charon.Backend.Rosetta.html  Charon.Class.Serial.html  Charon.Data.Index.html  Charon.Data.Metadata.html  Charon.Data.PathData.Formatting.html  Charon.Data.PathData.html  Charon.Data.PathType.html  Charon.Data.Paths.html  Charon.Data.Timestamp.html  Charon.Data.UniqueSeq.Internal.html  Charon.Data.UniqueSeq.html  Charon.Data.UniqueSeqNE.Internal.html  Charon.Data.UniqueSeqNE.html  Charon.Env.html  Charon.Exception.html  Charon.Prelude.html  Charon.Runner.Args.html  Charon.Runner.CharonT.html  Charon.Runner.Command.List.html  Charon.Runner.Command.html  Charon.Runner.Env.html  Charon.Runner.FileSizeMode.html  (+6 more)
examples/: config.toml
lib/file-utils/SafeRm/: FileUtils.hs
lib/test-utils/Test/: Utils.hs
src/: Charon.hs  SafeRm.hs
src/Charon/: Env.hs  Exception.hs  Prelude.hs  Runner.hs  Utils.hs
src/Charon/Backend/: Cbor.hs  Data.hs  Default.hs  Fdo.hs  Json.hs  Rosetta.hs
src/Charon/Backend/Cbor/: BackendArgs.hs  PathData.hs
src/Charon/Backend/Default/: BackendArgs.hs  Exception.hs  Index.hs  Trash.hs  (+1 more)
src/Charon/Class/: Serial.hs
src/Charon/Data/: Index.hs  Metadata.hs  PathData.hs  PathType.hs  Paths.hs  Timestamp.hs  UniqueSeq.hs  UniqueSeqNE.hs
src/Charon/Runner/: Args.hs  CharonT.hs  Command.hs  Config.hs  Default.hs  Env.hs  FileSizeMode.hs  Merged.hs  Phase.hs  Toml.hs  WithDisabled.hs
src/SafeRm/: Backend.hs  Env.hs  Exception.hs  Prelude.hs  Runner.hs  Trash.hs  Utils.hs
src/SafeRm/Backend/: Cbor.hs  Common.hs  Data.hs  Default.hs  Fdo.hs  Json.hs  Rosetta.hs
src/SafeRm/Class/: Serial.hs
src/SafeRm/Data/: Backend.hs  Index.hs  Metadata.hs  PathData.hs  PathType.hs  Paths.hs  Serialize.hs  Timestamp.hs  UniqueSeq.hs
src/SafeRm/Runner/: Args.hs  Command.hs  Config.hs  Env.hs  FileSizeMode.hs  Logging.hs  Phase.hs  SafeRmT.hs  Stage.hs  Toml.hs
test/functional/: Main.hs
test/functional/Functional/: Logging.hs  Prelude.hs
test/functional/goldens/: delete_deleteDotsError.golden  delete_deleteDuplicateFile.golden  delete_deleteEmptyError.golden  delete_deleteUnknownError.golden  delete_deletesMany.golden  delete_deletesMany_osx.golden  delete_deletesMany_windows.golden  delete_deletesOne.golden  delete_deletesPathological1_linux.golden  delete_deletesPathological1_windows.golden  delete_deletesPathological2.golden  delete_deletesSome.golden  delete_deletesTilde.golden  delete_deletesUnicode.golden  delete_savesCompletions.golden  empty_emptyPrompt.golden  empty_emptyTrash.golden  empty_missingInfoForcesDelete.golden  empty_missingPathsForcesDelete.golden  list_badFdoDirectorySizesIsNotFatal.golden  list_emptySucceeds.golden  list_missingInfoError.golden  list_missingPathError.golden  list_noInfoError.golden  list_noPathsError.golden  merge_mergeCollisionFails.golden  merge_mergeSucceeds.golden  metadata_empty.golden  metadata_empty_linux.golden  metadata_empty_osx.golden  metadata_metadata.golden  metadata_metadata_linux.golden  metadata_metadata_osx.golden  metadata_metadata_windows.golden  perm_delete_deleteUnknownError.golden  perm_delete_deletesCombinedWildcardLiteral.golden  perm_delete_deletesIndicesExit.golden  perm_delete_deletesLiteralWildcardOnly.golden  perm_delete_deletesMany.golden  perm_delete_deletesOne.golden  (+17 more)
test/integration/: Main.hs
test/integration/Integration/: AsciiOnly.hs  Charon.hs  Prelude.hs  SafeRm.hs  Utils.hs
test/unit/: Main.hs  Utils.hs  config.toml
test/unit/Unit/: Prelude.hs  Runner.hs  Trash.hs  Utils.hs
tools/: format.sh  haddock.sh  lint-refactor.sh  lint.sh
(+164 files in other folders)
