cabal-version:      2.4
name:               charon
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.6.6 || ==9.8.4 || ==9.10.2 || ==9.12.2
copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/charon/
bug-reports:        https://github.com/tbidne/charon/issues
synopsis:           Charon is a cross-platform cli trash tool
description:
  Charon is a cross-platform cli trash tool that includes
  integration with the Free Desktop trash spec.

category:           CLI Tools
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/charon

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies

  if os(windows)
    cpp-options: -DWINDOWS

  elif os(osx)
    cpp-options: -DOSX

  else
    cpp-options: -DLINUX

library
  import:           common-lang
  other-modules:    Paths_charon
  autogen-modules:  Paths_charon
  exposed-modules:
    Charon
    Charon.Backend.Cbor
    Charon.Backend.Cbor.BackendArgs
    Charon.Backend.Cbor.PathData
    Charon.Backend.Data
    Charon.Backend.Default
    Charon.Backend.Default.BackendArgs
    Charon.Backend.Default.Exception
    Charon.Backend.Default.Index
    Charon.Backend.Default.Trash
    Charon.Backend.Default.Utils
    Charon.Backend.Fdo
    Charon.Backend.Fdo.BackendArgs
    Charon.Backend.Fdo.DirectorySizes
    Charon.Backend.Fdo.PathData
    Charon.Backend.Fdo.Utils
    Charon.Backend.Json
    Charon.Backend.Json.BackendArgs
    Charon.Backend.Json.PathData
    Charon.Backend.Rosetta
    Charon.Class.Serial
    Charon.Data.Index
    Charon.Data.Metadata
    Charon.Data.PathData
    Charon.Data.PathData.Formatting
    Charon.Data.Paths
    Charon.Data.PathType
    Charon.Data.Timestamp
    Charon.Data.UniqueSeq
    Charon.Data.UniqueSeq.Internal
    Charon.Data.UniqueSeqNE
    Charon.Data.UniqueSeqNE.Internal
    Charon.Env
    Charon.Exception
    Charon.Prelude
    Charon.Runner
    Charon.Runner.Args
    Charon.Runner.Args.TH
    Charon.Runner.CharonT
    Charon.Runner.Command
    Charon.Runner.Command.List
    Charon.Runner.Config
    Charon.Runner.Default
    Charon.Runner.Env
    Charon.Runner.FileSizeMode
    Charon.Runner.Merged
    Charon.Runner.Phase
    Charon.Runner.Toml
    Charon.Runner.WithDisabled
    Charon.Utils

  build-depends:
    , aeson                 >=2.0       && <2.3
    , algebra-simple        ^>=0.1
    , base                  >=4.17.0.0  && <4.22
    , bytestring            >=0.11.1.0  && <0.13
    , containers            >=0.6.3.1   && <0.8
    , deepseq               >=1.4.6.0   && <1.6
    , effects-async         ^>=0.1
    , effects-fs            ^>=0.1
    , effects-haskeline     ^>=0.1
    , effects-ioref         ^>=0.1
    , effects-logger        ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-thread        ^>=0.1
    , effects-time          ^>=0.1
    , effects-unix-compat   ^>=0.1
    , exception-utils       ^>=0.1
    , exceptions            ^>=0.10.4
    , filepath              >=1.5       && <1.6
    , fs-utils              ^>=0.1
    , gitrev-typed          ^>=0.1
    , hashable              >=1.4.0.2   && <1.6
    , mtl                   >=2.2.1     && <2.4
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optics-core           ^>=0.4
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.15      && <0.19
    , os-string             ^>=2.0.1
    , path-size             ^>=0.1
    , pretty-terminal       ^>=0.1.0.0
    , serialise             ^>=0.2.6.0
    , si-bytes              ^>=0.1
    , template-haskell      >=2.19.0.0  && <2.24
    , text                  >=1.2.4.0   && <2.2
    , text-builder-linear   ^>=0.1.3
    , text-display          >=0.0.3.0   && <1.1
    , time                  >=1.9.3     && <1.15
    , toml-reader           >=0.2.0.0   && <0.3
    , unix-compat           >=0.6       && <0.8
    , unordered-containers  ^>=0.2.14.0
    , uri-bytestring        ^>=0.3.3.1
    , vector                >=0.12.3.0  && <0.14

  if !os(windows)
    build-depends: effects-unix ^>=0.1

  hs-source-dirs:   src
  default-language: GHC2021

library test-utils
  import:           common-lang
  exposed-modules:  Test.Utils
  build-depends:
    , base
    , charon
    , effects-fs
    , hedgehog              >=1.0.2    && <1.6
    , tasty                 >=1.1.0.3  && <1.6
    , tasty-golden          ^>=2.3.1.1
    , tasty-hunit           >=0.9      && <0.11
    , text
    , unordered-containers

  hs-source-dirs:   lib/test-utils
  default-language: GHC2021

executable charon
  import:             common-lang
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , charon
    , effects-haskeline
    , exception-utils

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N
  default-language:   GHC2021

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Backend.Cbor.PathData
    Unit.Backend.Default.Utils
    Unit.Backend.Fdo.PathData
    Unit.Backend.Json.PathData
    Unit.Data.Index
    Unit.Data.UniqueSeq
    Unit.Data.UniqueSeqNE
    Unit.Prelude
    Unit.Runner
    Unit.Utils
    Utils

  build-depends:
    , algebra-simple
    , base
    , charon
    , containers
    , effects-fs
    , effects-terminal
    , filepath
    , hedgehog
    , nonempty-containers
    , pretty-simple         >=4.0.0.0 && <4.2
    , random                >=1.2.1.1 && <1.4
    , tasty
    , tasty-golden
    , tasty-hedgehog        >=1.2.0.0 && <1.5
    , tasty-hunit
    , test-utils
    , text
    , time
    , unordered-containers

  hs-source-dirs:   test/unit
  ghc-options:      -threaded
  default-language: GHC2021

test-suite integration
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.AsciiOnly
    Integration.Charon
    Integration.Commands.Delete
    Integration.Prelude
    Integration.Utils

  build-depends:
    , base
    , charon
    , effects-fs
    , effects-logger
    , effects-terminal
    , effects-time
    , env-guard             ^>=0.2
    , hedgehog
    , mtl
    , nonempty-containers
    , tagged                ^>=0.8.6
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , test-utils
    , text
    , time
    , unicode-transforms    ^>=0.4.0
    , unordered-containers

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Commands.Convert
    Functional.Commands.Delete
    Functional.Commands.Empty
    Functional.Commands.List
    Functional.Commands.Merge
    Functional.Commands.Metadata
    Functional.Commands.PermDelete
    Functional.Commands.Restore
    Functional.Prelude
    Functional.Prelude.FuncEnv

  build-depends:
    , base
    , bytestring
    , charon
    , effects-fs
    , effects-logger
    , effects-terminal
    , effects-time
    , env-guard             ^>=0.2
    , filepath
    , pretty-simple
    , tasty
    , tasty-golden
    , tasty-hunit
    , test-utils
    , text
    , time
    , unordered-containers

  hs-source-dirs:   test/functional
  default-language: GHC2021

benchmark benchmarks
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Benchmarks.Prelude
    Benchmarks.ReadIndex

  build-depends:
    , base
    , charon
    , effects-fs
    , env-guard
    , tasty-bench  >=0.3 && <0.5
    , test-utils

  ghc-options:      -Wno-unused-packages
  hs-source-dirs:   benchmarks
  default-language: GHC2021
