cabal-version:      2.4
name:               safe-rm
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.4.4
copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/safe-rm/
bug-reports:        https://github.com/tbidne/safe-rm/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/safe-rm

common common-lang
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    TypeFamilies

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:           common-lang
  exposed-modules:
    SafeRm
    SafeRm.Data.Backend
    SafeRm.Data.Index
    SafeRm.Data.Metadata
    SafeRm.Data.PathData
    SafeRm.Data.PathData.Common
    SafeRm.Data.PathData.Default
    SafeRm.Data.PathData.Fdo
    SafeRm.Data.PathData.Formatting
    SafeRm.Data.Paths
    SafeRm.Data.PathType
    SafeRm.Data.Serialize
    SafeRm.Data.Timestamp
    SafeRm.Data.UniqueSeq
    SafeRm.Env
    SafeRm.Exception
    SafeRm.Prelude
    SafeRm.Runner
    SafeRm.Runner.Args
    SafeRm.Runner.Command
    SafeRm.Runner.Command.List
    SafeRm.Runner.Env
    SafeRm.Runner.FileSizeMode
    SafeRm.Runner.Phase
    SafeRm.Runner.SafeRmT
    SafeRm.Runner.Toml
    SafeRm.Trash
    SafeRm.Utils

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  >=4.17.0.0  && <4.18
    , bytestring            ^>=0.11.1.0
    , containers            ^>=0.6.3.1
    , deepseq               ^>=1.4.6.0
    , effects-exceptions    ^>=0.1
    , effects-fs            ^>=0.1
    , effects-ioref         ^>=0.1
    , effects-logger-ns     ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-time          ^>=0.1
    , filepath              ^>=1.4.2.1
    , gitrev                >=1.2.0     && <1.4
    , hashable              ^>=1.4.0.2
    , monad-logger          ^>=0.3.30
    , mtl                   >=2.2.1     && <2.4
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optics-core           ^>=0.4
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.15      && <0.18
    , package-version       >=0.1.0.0   && <0.4
    , path-size             ^>=0.1
    , prettyprinter         ^>=1.7.1
    , si-bytes              ^>=0.1
    , text                  >=1.2.4.0   && <2.1
    , time                  >=1.9.3     && <1.14
    , toml-reader           >=0.2.0.0   && <0.3
    , unordered-containers  ^>=0.2.14.0
    , vector                >=0.12.3.0  && <0.14

  hs-source-dirs:   src
  default-language: GHC2021

library test-utils
  import:           common-lang
  exposed-modules:  Test.Utils
  build-depends:
    , base
    , safe-rm
    , tasty-hunit
    , text

  hs-source-dirs:   lib/test-utils
  default-language: GHC2021

executable safe-rm
  import:             common-lang
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , safe-rm

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N
  default-language:   GHC2021

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Data.Index
    Unit.Data.PathData
    Unit.Data.UniqueSeq
    Unit.Prelude
    Unit.Runner
    Unit.Trash
    Unit.Utils

  build-depends:
    , algebra-simple
    , base
    , containers
    , effects-fs
    , effects-logger-ns
    , effects-terminal
    , hedgehog              >=1.0.2    && <1.3
    , nonempty-containers
    , path-size
    , pretty-simple         >=4.0.0.0  && <4.2
    , safe-rm
    , tasty                 >=1.1.0.3  && <1.5
    , tasty-golden          ^>=2.3.1.1
    , tasty-hedgehog        >=1.2.0.0  && <1.5
    , tasty-hunit           >=0.9      && <0.11
    , test-utils
    , text
    , time
    , unordered-containers

  hs-source-dirs:   test/unit
  default-language: GHC2021

test-suite integration
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.AsciiOnly
    Integration.Commands.Delete
    Integration.Prelude
    Integration.SafeRm

  build-depends:
    , base
    , effects-fs
    , effects-logger-ns
    , effects-terminal
    , effects-time
    , env-guard             ^>=0.2
    , hedgehog
    , mtl
    , nonempty-containers
    , path-size
    , safe-rm
    , tagged                ^>=0.8.6
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , test-utils
    , text
    , time
    , unordered-containers

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Commands.Convert
    Functional.Commands.Delete
    Functional.Commands.Empty
    Functional.Commands.List
    Functional.Commands.Merge
    Functional.Commands.Metadata
    Functional.Commands.PermDelete
    Functional.Commands.Restore
    Functional.Prelude
    Functional.Prelude.FuncEnv

  build-depends:
    , algebra-simple
    , base
    , bytestring
    , effects-fs
    , effects-logger-ns
    , effects-terminal
    , effects-time
    , env-guard             ^>=0.2
    , nonempty-containers
    , path-size
    , pretty-simple
    , safe-rm
    , tasty
    , tasty-hunit
    , test-utils
    , text
    , time
    , unordered-containers

  hs-source-dirs:   test/functional
  default-language: GHC2021

benchmark benchmarks
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Benchmarks.Prelude
    Benchmarks.ReadIndex

  build-depends:
    , base
    , effects-fs
    , env-guard
    , safe-rm
    , tasty-bench  ^>=0.3
    , test-utils
    , text

  ghc-options:      -Wno-unused-packages
  hs-source-dirs:   benchmarks
  default-language: GHC2021
