cabal-version:      2.4
name:               safe-rm
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.6.2
copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/safe-rm/
bug-reports:        https://github.com/tbidne/safe-rm/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/safe-rm

common common-lang
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    TypeFamilies

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:           common-lang
  other-modules:    Paths_safe_rm
  autogen-modules:  Paths_safe_rm
  exposed-modules:
    SafeRm
    SafeRm.Data.Backend
    SafeRm.Data.Index
    SafeRm.Data.Metadata
    SafeRm.Data.PathData
    SafeRm.Data.PathData.Cbor
    SafeRm.Data.PathData.Common
    SafeRm.Data.PathData.Core
    SafeRm.Data.PathData.Fdo
    SafeRm.Data.PathData.Formatting
    SafeRm.Data.Paths
    SafeRm.Data.PathType
    SafeRm.Data.Serialize
    SafeRm.Data.Timestamp
    SafeRm.Data.UniqueSeq
    SafeRm.Env
    SafeRm.Exception
    SafeRm.Prelude
    SafeRm.Runner
    SafeRm.Runner.Args
    SafeRm.Runner.Command
    SafeRm.Runner.Command.List
    SafeRm.Runner.Env
    SafeRm.Runner.FileSizeMode
    SafeRm.Runner.Logging
    SafeRm.Runner.Phase
    SafeRm.Runner.Toml
    SafeRm.Trash
    SafeRm.Utils

  build-depends:
    , algebra-simple         ^>=0.1
    , base                   >=4.17.0.0  && <4.19
    , bytestring             >=0.11.1.0  && <0.13
    , containers             ^>=0.6.3.1
    , deepseq                >=1.4.6.0   && <1.6
    , effectful              >=2.2.1.0   && <2.4
    , exceptions-effectful   ^>=0.1
    , filepath               ^>=1.4.2.1
    , fs-effectful           ^>=0.1
    , hashable               ^>=1.4.0.2
    , ioref-effectful        ^>=0.1
    , logger-effectful       ^>=0.1
    , logger-ns-effectful    ^>=0.1
    , nonempty-containers    >=0.3.4.2   && <0.4
    , optics-core            ^>=0.4
    , optics-th              ^>=0.4
    , optparse-applicative   >=0.15      && <0.19
    , optparse-effectful     ^>=0.1
    , path-size              ^>=0.1
    , prettyprinter          ^>=1.7.1
    , serialise              ^>=0.2.6.0
    , si-bytes               ^>=0.1
    , terminal-effectful     ^>=0.1
    , text                   >=1.2.4.0   && <2.1
    , time                   >=1.9.3     && <1.14
    , time-effectful         ^>=0.1
    , toml-reader            >=0.2.0.0   && <0.3
    , unix-compat-effectful  ^>=0.1
    , unordered-containers   ^>=0.2.14.0
    , uri-bytestring         ^>=0.3.3.1
    , vector                 >=0.12.3.0  && <0.14

  hs-source-dirs:   src
  default-language: GHC2021

library test-utils
  import:           common-lang
  exposed-modules:  Test.Utils
  build-depends:
    , base
    , fs-effectful
    , hedgehog
    , safe-rm
    , tasty-hunit
    , terminal-effectful
    , text
    , unordered-containers

  hs-source-dirs:   lib/test-utils
  default-language: GHC2021

executable safe-rm
  import:             common-lang
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , effectful
    , fs-effectful
    , ioref-effectful
    , optparse-effectful
    , safe-rm
    , terminal-effectful
    , time-effectful
    , unix-compat-effectful

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N
  default-language:   GHC2021

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Data.Index
    Unit.Data.PathData
    Unit.Data.UniqueSeq
    Unit.Prelude
    Unit.Runner
    Unit.Trash
    Unit.Utils

  build-depends:
    , base
    , containers
    , effectful
    , fs-effectful
    , hedgehog               >=1.0.2    && <1.5
    , logger-effectful
    , logger-ns-effectful
    , optparse-effectful
    , pretty-simple          >=4.0.0.0  && <4.2
    , safe-rm
    , tasty                  >=1.1.0.3  && <1.5
    , tasty-golden           ^>=2.3.1.1
    , tasty-hedgehog         >=1.2.0.0  && <1.5
    , tasty-hunit            >=0.9      && <0.11
    , terminal-effectful
    , test-utils
    , text
    , time
    , time-effectful
    , unix-compat-effectful
    , unordered-containers

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite integration
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.AsciiOnly
    Integration.Commands.Delete
    Integration.Prelude
    Integration.SafeRm
    Integration.Utils

  build-depends:
    , base
    , env-guard             ^>=0.2
    , exceptions-effectful
    , filepath
    , fs-effectful
    , hashable
    , hedgehog
    , logger-effectful
    , logger-ns-effectful
    , mtl
    , safe-rm
    , tagged                ^>=0.8.6
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , terminal-effectful
    , test-utils
    , text
    , time
    , time-effectful
    , unordered-containers

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Commands.Convert
    Functional.Commands.Delete
    Functional.Commands.Empty
    Functional.Commands.List
    Functional.Commands.Merge
    Functional.Commands.Metadata
    Functional.Commands.PermDelete
    Functional.Commands.Restore
    Functional.Prelude
    Functional.Prelude.FuncEnv

  build-depends:
    , algebra-simple
    , base
    , effectful
    , env-guard             ^>=0.2
    , exceptions-effectful
    , filepath
    , fs-effectful
    , logger-effectful
    , logger-ns-effectful
    , pretty-simple
    , safe-rm
    , tasty
    , tasty-hunit
    , terminal-effectful
    , test-utils
    , text
    , time
    , time-effectful
    , unordered-containers

  hs-source-dirs:   test/functional
  default-language: GHC2021

benchmark benchmarks
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Benchmarks.Prelude
    Benchmarks.ReadIndex

  build-depends:
    , base
    , env-guard
    , fs-effectful
    , safe-rm
    , tasty-bench         ^>=0.3
    , terminal-effectful
    , test-utils
    , time-effectful

  hs-source-dirs:   benchmarks
  default-language: GHC2021
